--- a/css/styles.css
+++ b/css/styles.css
@@ -3090,9 +3090,7 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-  color: #fff;
-  background-color: #198754;
-  border-color: #198754;
+  background-color: #1abc9c;
 }
 .btn-success:hover {
   color: #fff;
