--- a/css/styles.css
+++ b/css/styles.css
@@ -3090,7 +3090,7 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-  background-color: #1abc9c;
+  background-color: #464861;
 }
 .btn-success:hover {
   color: #fff;
